examples/tests/valid/preflight_class_inflight.w
bring cloud;

let handler = inflight () => {
  class R { }
  new R();
};